--- a/src/WebApp/appsettings.json
+++ b/src/WebApp/appsettings.json
@@ -36,16 +36,16 @@
     "NetworkPassword": "",
     "AzureAccountName": "",
     "BlobContainer": "",
-    "BlobBasePath": "ApplicationData/CtsData"
+    "BlobBasePath": ""
   },
   "EmailServiceSettings": {
     "EnableEmail": false,
     "SaveEmail": true,
     "SmtpHost": "localhost",
     "SmtpPort": 25,
-    "DefaultSender": "CTS.Emailer@email.invalid",
-    "SecureSocketOption": "Auto",
-    "EnableEmailAuditing": true,
+    "DefaultSender": "App.Emailer@email.invalid",
+    "SecureSocketOption": "None",
+    "EnableEmailAuditing": false,
     "AuditEmailRecipients": [
       "Audit.Recipient@email.invalid"
     ]
