--- a/src/Domain/Domain.csproj
+++ b/src/Domain/Domain.csproj
@@ -10,6 +10,7 @@
     <ItemGroup>
         <PackageReference Include="GaEpd.AppLibrary" />
         <PackageReference Include="JetBrains.Annotations" />
+        <PackageReference Include="Markdig" />
         <PackageReference Include="Microsoft.EntityFrameworkCore" />
         <PackageReference Include="Microsoft.Extensions.Identity.Stores" />
         <PackageReference Include="SonarAnalyzer.CSharp">
