--- a/src/EmailService/EmailService.csproj
+++ b/src/EmailService/EmailService.csproj
@@ -9,6 +9,7 @@
 
     <ItemGroup>
       <PackageReference Include="MailKit" />
+      <PackageReference Include="Markdig" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection" />
       <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" />
     </ItemGroup>
