--- a/src/WebApp/WebApp.csproj
+++ b/src/WebApp/WebApp.csproj
@@ -14,6 +14,7 @@
 
     <ItemGroup>
         <PackageReference Include="LigerShark.WebOptimizer.Core" />
+        <PackageReference Include="Markdig" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" />
         <PackageReference Include="Microsoft.Identity.Web" />
