--- a/tests/LocalRepositoryTests/LocalRepositoryTests.csproj
+++ b/tests/LocalRepositoryTests/LocalRepositoryTests.csproj
@@ -9,6 +9,7 @@
 
     <ItemGroup>
         <PackageReference Include="FluentAssertions" />
+        <PackageReference Include="Markdig" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" />
         <PackageReference Include="NSubstitute" />
         <PackageReference Include="NSubstitute.Analyzers.CSharp">
