--- a/src/AppServices/AppServices.csproj
+++ b/src/AppServices/AppServices.csproj
@@ -12,6 +12,7 @@
         <PackageReference Include="ClosedXML" />
         <PackageReference Include="FluentValidation.AspNetCore" />
         <PackageReference Include="GaEpd.FileService" />
+        <PackageReference Include="HtmlSanitizer" />
         <PackageReference Include="JetBrains.Annotations" />
         <PackageReference Include="Markdig" />
         <PackageReference Include="SonarAnalyzer.CSharp">
