Added .UseBootstrap() to MarkdownPiplineBuilder(), Moved Markdown.cs to WebApp from AppServices, Uninstalled HtmlSanitizer from AppServices and reinstalled in WebApp

--- a/src/WebApp/WebApp.csproj
+++ b/src/WebApp/WebApp.csproj
@@ -9,6 +9,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="HtmlSanitizer" />
         <PackageReference Include="LigerShark.WebOptimizer.Core" />
         <PackageReference Include="Markdig" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" />
