Used libman UI to install aspnet-client-validation.

--- a/src/WebApp/WebApp.csproj
+++ b/src/WebApp/WebApp.csproj
@@ -62,4 +62,8 @@
         </MsDeploySkipRules>
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="wwwroot\lib\aspnet-client-validation\" />
+    </ItemGroup>
+
 </Project>
