Replace email service project with NuGet package

--- a/src/WebApp/appsettings.json
+++ b/src/WebApp/appsettings.json
@@ -40,15 +40,16 @@
   },
   "EmailServiceSettings": {
     "EnableEmail": false,
-    "SaveEmail": true,
     "SmtpHost": "localhost",
     "SmtpPort": 25,
-    "DefaultSender": "App.Emailer@email.invalid",
+    "DefaultSenderName": "EPD-IT",
+    "DefaultSenderEmail": "App.Emailer@email.invalid",
     "SecureSocketOption": "None",
     "EnableEmailAuditing": false,
     "AuditEmailRecipients": [
       "Audit.Recipient@email.invalid"
-    ]
+    ],
+    "EnableEmailLog": true
   },
   "DevSettings": {
     "UseDevSettings": true,
