--- a/src/AppServices/AppServices.csproj
+++ b/src/AppServices/AppServices.csproj
@@ -11,6 +11,7 @@
         <PackageReference Include="AutoMapper" />
         <PackageReference Include="ClosedXML" />
         <PackageReference Include="FluentValidation.AspNetCore" />
+        <PackageReference Include="GaEpd.EmailService"/>
         <PackageReference Include="GaEpd.FileService" />
         <PackageReference Include="JetBrains.Annotations" />
         <PackageReference Include="Microsoft.Identity.Web" />
@@ -22,7 +23,6 @@
 
     <ItemGroup>
         <ProjectReference Include="..\Domain\Domain.csproj" />
-        <ProjectReference Include="..\EmailService\EmailService.csproj" />
     </ItemGroup>
 
 </Project>
