--- a/src/WebApp/appsettings.json
+++ b/src/WebApp/appsettings.json
@@ -60,6 +60,7 @@
     "LocalUserIsAuthenticated": true,
     "LocalUserIsStaff": true,
     "LocalUserIsAdmin": true,
-    "UseSecurityHeadersInDev": false
+    "UseSecurityHeadersInDev": false,
+    "EnableWebOptimizer": false
   }
 }
