Simplify configuring the test user in dev settings

--- a/src/WebApp/appsettings.json
+++ b/src/WebApp/appsettings.json
@@ -58,8 +58,7 @@
     "DeleteAndRebuildDatabase": true,
     "UseAzureAd": false,
     "LocalUserIsAuthenticated": true,
-    "LocalUserIsStaff": true,
-    "LocalUserIsAdmin": true,
+    "LocalUserRoles": [],
     "UseSecurityHeadersInDev": false,
     "EnableWebOptimizer": false
   }
