--- a/src/WebApp/appsettings.json
+++ b/src/WebApp/appsettings.json
@@ -3,7 +3,7 @@
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=template-app;Trusted_Connection=True;MultipleActiveResultSets=true",
     "MigrationConnection": "Server=(localdb)\\mssqllocaldb;Database=template-app;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
-  "SeedAdminUsers": [],
+  "SeedUserRoles": [],
   "PersistedFilesBasePath": "../../.artifacts/_appFiles",
   "Logging": {
     "LogLevel": {
